--- a/SampleMultiview/Storyboard.storyboard
+++ b/SampleMultiview/Storyboard.storyboard
@@ -15,7 +15,7 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="00:00:00" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" id="m83-lu-TMg" userLabel="elaped time">
-                                <rect key="frame" x="458" y="20" width="251" height="61"/>
+                                <rect key="frame" x="508" y="6" width="251" height="61"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="40"/>
                                 <color key="textColor" red="0.0" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -90,28 +90,50 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
                                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Exercise" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" adjustsFontSizeToFit="NO" id="b7f-n0-D9H">
-                                        <rect key="frame" x="20" y="20" width="366" height="48"/>
+                                        <rect key="frame" x="100" y="76" width="626" height="164"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="40"/>
+                                        <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="84"/>
                                         <color key="textColor" red="0.77772241710000001" green="0.7351658137" blue="0.13020978" alpha="0.59999999999999998" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Reps" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" adjustsFontSizeToFit="NO" id="4f1-0V-Y3t">
-                                        <rect key="frame" x="95" y="76" width="555" height="164"/>
+                                        <rect key="frame" x="100" y="302" width="648" height="164"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="187"/>
+                                        <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="84"/>
                                         <color key="textColor" red="0.0" green="0.68055791440000002" blue="0.060243139020000003" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Weight" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" adjustsFontSizeToFit="NO" id="qx5-gC-fl4">
-                                        <rect key="frame" x="591" y="251" width="146" height="49"/>
+                                        <rect key="frame" x="100" y="549" width="626" height="211"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="40"/>
+                                        <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="84"/>
                                         <color key="textColor" red="1" green="0.67813305199999996" blue="0.31818759149999998" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="nothing next" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="10" adjustsFontSizeToFit="NO" id="nGb-X9-UnE">
+                                        <rect key="frame" x="100" y="768" width="626" height="211"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="55"/>
+                                        <color key="textColor" red="0.5" green="0.0" blue="0.5" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="EbZ-EJ-XTn" userLabel="Button - Next">
-                                        <rect key="frame" x="676" y="139" width="64" height="64"/>
+                                        <rect key="frame" x="664" y="226" width="84" height="84"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                        <state key="normal" title="Next" image="button_black_ffw.png">
+                                            <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <state key="highlighted">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="nextButtonPressed:" destination="ZI4-Ty-Ick" eventType="touchUpInside" id="Qo0-Mf-hSH"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="rq5-VR-JOU" userLabel="Button - Next">
+                                        <rect key="frame" x="664" y="474" width="84" height="84"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                         <state key="normal" title="Start" image="button_black_play.png">
@@ -122,11 +144,11 @@
                                             <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
                                         <connections>
-                                            <action selector="startButtonPressed:" destination="ZI4-Ty-Ick" eventType="touchUpInside" id="Te9-OM-Ow5"/>
+                                            <action selector="startButtonPressed:" destination="ZI4-Ty-Ick" eventType="touchUpInside" id="4s8-aE-L6l"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="R8c-Kb-bDC">
-                                        <rect key="frame" x="28" y="176" width="64" height="64"/>
+                                        <rect key="frame" x="20" y="474" width="84" height="84"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                         <state key="normal" title="Stop" image="button_black_stop.png">
@@ -137,11 +159,11 @@
                                             <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
                                         <connections>
-                                            <action selector="stopTimerPressed:" destination="ZI4-Ty-Ick" eventType="touchUpInside" id="qv2-Ah-wWi"/>
+                                            <action selector="stopButtonPressed:" destination="ZI4-Ty-Ick" eventType="touchUpInside" id="pVO-Wc-kJK"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="sl6-bn-aaA">
-                                        <rect key="frame" x="28" y="95" width="64" height="64"/>
+                                        <rect key="frame" x="20" y="226" width="84" height="84"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                         <state key="normal" title="Pause" image="button_black_pause.png">
@@ -152,7 +174,7 @@
                                             <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
                                         <connections>
-                                            <action selector="pauseTimerPressed:" destination="ZI4-Ty-Ick" eventType="touchUpInside" id="WPF-nG-sMG"/>
+                                            <action selector="pauseButtonPressed:" destination="ZI4-Ty-Ick" eventType="touchUpInside" id="6W7-Za-J0K"/>
                                         </connections>
                                     </button>
                                 </subviews>
@@ -165,10 +187,12 @@
                         <outlet property="currentRepsInTimer" destination="4f1-0V-Y3t" id="eZR-U1-raT"/>
                         <outlet property="currentView" destination="SgD-FE-kxM" id="bWt-fJ-Hkv"/>
                         <outlet property="currentWeightInTimer" destination="qx5-gC-fl4" id="3zK-Xr-uD1"/>
+                        <outlet property="nextButton" destination="EbZ-EJ-XTn" id="3y7-uT-D1L"/>
+                        <outlet property="nextExerciseLabel" destination="nGb-X9-UnE" id="naq-hA-DyS"/>
                         <outlet property="programTime" destination="m83-lu-TMg" id="0Xe-3P-LfI"/>
                         <outlet property="repsView" destination="ZoG-0e-kDi" id="mEM-Gg-ZHR"/>
                         <outlet property="timerPauseButton" destination="sl6-bn-aaA" id="5a2-OK-KHP"/>
-                        <outlet property="timerStartButton" destination="EbZ-EJ-XTn" id="f7L-hS-cV0"/>
+                        <outlet property="timerStartButton" destination="rq5-VR-JOU" id="Ial-1d-VY9"/>
                         <outlet property="timerStopButton" destination="R8c-Kb-bDC" id="iMV-1j-gfo"/>
                     </connections>
                 </viewController>
@@ -453,6 +477,7 @@
     </scenes>
     <resources>
         <image name="MB_0018_viewer.png" width="256" height="256"/>
+        <image name="button_black_ffw.png" width="128" height="128"/>
         <image name="button_black_pause.png" width="128" height="128"/>
         <image name="button_black_play.png" width="128" height="128"/>
         <image name="button_black_stop.png" width="128" height="128"/>
@@ -463,17 +488,19 @@
         <class className="CurrentViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/CurrentViewController.h"/>
             <relationships>
-                <relationship kind="action" name="pauseTimerPressed:"/>
-                <relationship kind="action" name="startTimerPressed:"/>
-                <relationship kind="action" name="stopTimerPressed:"/>
+                <relationship kind="action" name="nextButtonPressed:"/>
+                <relationship kind="action" name="pauseButtonPressed:"/>
+                <relationship kind="action" name="startButtonPressed:"/>
+                <relationship kind="action" name="stopButtonPressed:"/>
                 <relationship kind="outlet" name="currentExerciseInTimer" candidateClass="UILabel"/>
                 <relationship kind="outlet" name="currentRepsInTimer" candidateClass="UILabel"/>
                 <relationship kind="outlet" name="currentTimeInTimer" candidateClass="UILabel"/>
                 <relationship kind="outlet" name="currentView" candidateClass="UIView"/>
                 <relationship kind="outlet" name="currentWeightInTimer" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="nextButton" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="nextExerciseLabel" candidateClass="UILabel"/>
                 <relationship kind="outlet" name="programTime" candidateClass="UILabel"/>
                 <relationship kind="outlet" name="repsView" candidateClass="UIView"/>
-                <relationship kind="outlet" name="timeView" candidateClass="UIView"/>
                 <relationship kind="outlet" name="timerPauseButton" candidateClass="UIButton"/>
                 <relationship kind="outlet" name="timerStartButton" candidateClass="UIButton"/>
                 <relationship kind="outlet" name="timerStopButton" candidateClass="UIButton"/>
@@ -524,7 +551,6 @@
                 <relationship kind="action" name="randomiseRest:"/>
                 <relationship kind="action" name="randomiseSets:"/>
                 <relationship kind="action" name="randomiseWeight:"/>
-                <relationship kind="action" name="weightOrTimeChosen:"/>
                 <relationship kind="outlet" name="addNewBodyPart" candidateClass="UITextField"/>
                 <relationship kind="outlet" name="addNewExerciseType" candidateClass="UITextField"/>
                 <relationship kind="outlet" name="categoryButton" candidateClass="UISegmentedControl"/>
